--- a/index.html
+++ b/index.html
@@ -1,7 +1,156 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <nav>
+        <span id="nav-logo">Ryan K McKinney</span>
+        <span id="nav-links">
+            <a href="#">Work</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </span>
+    </nav>
+    <main>
+        <div class="row" id="hero">
+            <div class="col-2">
+                <img src="">
+            </div>
+            <div class="col-8">
+                <div id="hero-text">
+                    <h1>Hi! I'm a UX Designer passionate about creating unique and delightful experiences.</h1>
+                    <p>With a background in web development and communications, I specialize in creating detailed prototypes that are  based on solid user research, and design systems that provide clear guidance to developers.</p>
+                    <p>Currently a UI Designer and Developer for AssuranceAmerica Corporation, working on their web applications, mobile application and website.</p>
+                    <div id="hero-links" class="row">
+                        <div id="resume-links" class="col-6">
+                            <a href="#">Resume</a>
+                            <a href="#">Resume (docx)</a>
+                        </div>
+                        <div id="hero-social-links" class="col-6">
+                            <a href="#"><img src=""></a>
+                            <a href="#"><img src=""></a>
+                            <a href="#"><img src=""></a>
+                            <a href="#"><img src=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row" id="work-and-skills">
+            <div class="col-5 left-column">
+                <div class="work-item" style="background-image: url('images/wayfarer.jpg')">
+                    <div class="work-description">
+                        <h3>UX Design Project: Wayfinder Mobile Prototype</h3>
+                        <p>Creating a mobile application to help users enjoy travelling by providing suggestions on the fly.</p>
+                    </div>
+                </div>
+                <div class="work-item" style="background-image: url('images/grassroots.jpg')">
+                    <div class="work-description">
+                        <h3>Grassroots Mobile Application</h3>
+                        <p>Designing a way to provide users with an easy way to get and stay involved in local politics and causes.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="work-item" style="background-image: url('images/botanical.jpg')">
+                    <div class="work-description">
+                        <h3>United States Botanical Gardens Website Redesign</h3>
+                        <p>Providing a more organized site hierarchy, navigation, and improved visual design.</p>
+                    </div>
+                </div>
+                <div class="work-item" style="background-image: url('images/aamobile.jpg')">
+                    <div class="work-description">
+                        <h3>AssuranceAmerica Mobile App</h3>
+                        <p>Designing an insurance quoting application from the ground up, based on user research.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <h3>Web Development</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>Bootstrap</li>
+                        <li>Visual Studio</li>
+                        <li>GitHub</li>
+                        <li>TypeScript</li>
+                        <li>Angular</li>
+                        <li>SQL</li>
+                    </ul>
+                    <h3>User Research</h3>
+                    <ul>
+                        <li>Persona Creation</li>
+                        <li>User Interviews</li>
+                        <li>Affinity Diagrams</li>
+                        <li>Empathy Maps</li>
+                        <li>User Scenarios</li>
+                        <li>Journeymaps</li>
+                    </ul>
+                    <h3>Prototyping</h3>
+                    <ul>
+                        <li>User Flow Diagrams</li>
+                        <li>Wireframing</li>
+                        <li>Information Architecture</li>
+                        <li>Sitemaps</li>
+                        <li>UI Design</li>
+                        <li>UX Writing</li>
+                    </ul>
+                    <h3>User Testing</h3>
+                    <ul>
+                        <li>Usability Heuristics</li>
+                        <li>A/B Testing</li>
+                        <li>Data Synthesis</li>
+                        <li>Data Visualization</li>
+                    </ul>
+                    <h3>Design Systems &#38; Tools</h3>
+                    <ul>
+                        <li>Google Material</li>
+                        <li>Atomic Design</li>
+                        <li>Adobe XD</li>
+                        <li>Photoshop</li>
+                        <li>Illustrator</li>
+                        <li>Figma</li>
+                        <li>InVision</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12" id="contact-me">
+                <h2>Let's Talk Design</h2>
+                <p>I love the design process and always welcome the opportunity to talk to like minded individuals, and people who are looking for design solutions</p>
+                <p>Whether it's analyzing an existing project, or generating ideas for a new experience, feel free to hit me up on email or social media to get the conversation started</p>
+                <div class="work-and-skills-social-links">
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Email</a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="row">
+            <div class="col-6">
+                <h3>Ryan K McKinney</h3>
+                <p>Atlanta, GA</p>
+                <p>478.832.5166</p>
+                <p>ryankmckinney@gmail.com</p>
+            </div>
+            <div class="col=6">
+                <div class="footer-social-links">
+                    <a href="#"><img src=""></a>
+                    <a href="#"><img src=""></a>
+                    <a href="#"><img src=""></a>
+                    <a href="#"><img src=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
