--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <main>
         <div class="row" id="hero">
             <div class="col-2">
-                <img src="">
+                <img src="images/mypic.png" style="height: 250px; width: auto; margin-right: 100px;">
             </div>
             <div class="col-8">
                 <div id="hero-text">
-                    <h1>Hi! I'm a UX Designer passionate about creating unique and delightful experiences.</h1>
+                    <h1>Hi! I'm Ryan, a UX Designer passionate about creating unique and delightful experiences.</h1>
                     <p>With a background in web development and communications, I specialize in creating detailed prototypes that are  based on solid user research, and design systems that provide clear guidance to developers.</p>
                     <p>Currently a UI Designer and Developer for AssuranceAmerica Corporation, working on their web applications, mobile application and website.</p>
                     <div id="hero-links" class="row">
