--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                             <a href="#">Resume (docx)</a>
                         </div>
                         <div id="hero-social-links" class="col-6">
-                            <a href=""><img src="images/facebookCyan.png"></a>
-                            <a href="#"><img src="images/linkedinMagenta.png"></a>
-                            <a href="#"><img src="images/instagramYellow.png"></a>
-                            <a href="#"><img src="images/emailWhite.png"></a>
+                            <a href=""><img class="hero-social-buttons" src="images/facebookCyan.png"></a>
+                            <a href="#"><img class="hero-social-buttons" src="images/linkedinMagenta.png"></a>
+                            <a href="#"><img class="hero-social-buttons" src="images/instagramYellow.png"></a>
+                            <a href="#"><img class="hero-social-buttons" src="images/emailWhite.png"></a>
                         </div>
                     </div>
                 </div>
