--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/oum5cye.css">
 </head>
 <body>
     <nav>
-        <span id="nav-logo">Ryan K McKinney</span>
+        <span id="nav-logo"><img src="images/rykmckBlack.png" style="width: 150px; height: auto;"></span>
         <span id="nav-links">
             <a href="#">Work</a>
             <a href="#">About</a>
@@ -40,30 +41,26 @@
         </div>
         <div class="row" id="work-and-skills">
             <div class="col-5 left-column">
-                <div class="work-item" style="background-image: url('images/wayfarer.jpg')">
+                <div class="work-item" style="background-image: url('images/wayfarerMagenta.jpg'); background-size: contain;">
                     <div class="work-description">
-                        <h3>UX Design Project: Wayfinder Mobile Prototype</h3>
-                        <p>Creating a mobile application to help users enjoy travelling by providing suggestions on the fly.</p>
+                        <h3>Wayfinder Mobile Prototype</h3>
                     </div>
                 </div>
-                <div class="work-item" style="background-image: url('images/grassroots.jpg')">
+                <div class="work-item" style="background-image: url('images/grassrootsYellow.jpg'); background-size: contain;">
                     <div class="work-description">
-                        <h3>Grassroots Mobile Application</h3>
-                        <p>Designing a way to provide users with an easy way to get and stay involved in local politics and causes.</p>
+                        <h3>Grassroots Prototype</h3>
                     </div>
                 </div>
             </div>
             <div class="col-5">
-                <div class="work-item" style="background-image: url('images/botanical.jpg')">
+                <div class="work-item" style="background-image: url('images/botanicalCyan.jpg'); background-size: contain;">
                     <div class="work-description">
-                        <h3>United States Botanical Gardens Website Redesign</h3>
-                        <p>Providing a more organized site hierarchy, navigation, and improved visual design.</p>
+                        <h3>Botanical Website Redesign</h3>
                     </div>
                 </div>
-                <div class="work-item" style="background-image: url('images/aamobile.jpg')">
+                <div class="work-item" style="background-image: url('images/aamobileMagenta.jpg'); background-size: contain;">
                     <div class="work-description">
-                        <h3>AssuranceAmerica Mobile App</h3>
-                        <p>Designing an insurance quoting application from the ground up, based on user research.</p>
+                        <h3>Car Insurance Application</h3>
                     </div>
                 </div>
             </div>
