--- a/index.html
+++ b/index.html
@@ -134,19 +134,17 @@
     </main>
     <footer>
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 footer-contact-info">
                 <h3>Ryan K McKinney</h3>
                 <p>Atlanta, GA</p>
                 <p>478.832.5166</p>
                 <p>ryankmckinney@gmail.com</p>
             </div>
-            <div class="col=6">
-                <div class="footer-social-links">
-                    <a href="#"><img src=""></a>
-                    <a href="#"><img src=""></a>
-                    <a href="#"><img src=""></a>
-                    <a href="#"><img src=""></a>
-                </div>
+            <div class="col=6 footer-social-links">
+                <a href="#"><img class="footer-social-buttons" src="images/facebookCyan.png"></a>
+                <a href="#"><img class="footer-social-buttons" src="images/linkedinMagenta.png"></a>
+                <a href="#"><img class="footer-social-buttons" src="images/instagramYellow.png"></a>
+                <a href="#"><img class="footer-social-buttons" src="images/emailWhite.png"></a>
             </div>
         </div>
     </footer>
